# maat

./: .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 8f49c56a214d_initial_migration.py
src/maat/: main.py  models.py  repository.py  tui.py
tests/: conftest.py  test_logic.py
