[build-system]
requires = ["uv-build"]
build-backend = "uv_build"

[project]
name = "maat"
version = "0.0.1"
description = "User scores and reviews TUI for everything u like."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "sqlalchemy>=2.0.48",
    "textual>=0.85.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[project.scripts]
maat = "maat.main:main"
